# shopia

./: README-cn.md  package.json
cloud_function_baas_python/: README.md  pyproject.toml  pyrightconfig.json
cloud_function_baas_python/api/: metadata.json
cloud_function_baas_python/api/sayhi/: hello.py
cloud_function_baas_python/api/todo/: create.py  delete.py  edit.py  search.py
native_golang/: README-cn.md  README.md
native_nodejs/: README.md
native_python/: README-cn.md  README.md
native_typescript/: README-cn.md  README.md  package.json
